Fixes #2019: OffCancas compare: hide horizontal scrollbar

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_cart.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_cart.scss
@@ -137,6 +137,10 @@
     }
 }
 
+.offcanvas-cart-footer {
+    overflow-x: hidden;
+}
+
 .offcanvas-cart-footer-row {
     display: flex; 
     justify-content: space-between;
